apps/docs/src/app/v4/components/mui/RHFMultiAutocomplete/page.mdx
import { DocsPage, PropsTable, AvailabilityBanner, Callout } from '@/components/docs';
import { componentMetadata, componentPropsV4 } from '@/constants';

export const metadata = componentMetadata.RHFMultiAutocomplete;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFMultiAutocomplete

<AvailabilityBanner componentName="RHFMultiAutocomplete" version="2.0" />

**RHFMultiAutocomplete** is an enhanced version of [RHFAutocomplete](/v4/components/mui/RHFAutocomplete)
that supports selecting multiple options from a dataset. It also includes
a **"Select All"** feature, allowing users to quickly select all available options with a single click.

This feature is particularly useful for scenarios where users need to handle bulk selections,
such as assigning multiple tags, selecting categories, or choosing items in batch operations.
The implementation stays flexible while preserving the
same validation, customization, and styling options as `RHFAutocomplete`.

<Callout type="note">
Starting with **v4**, the `freeSolo` prop is supported in **RHFMultiAutocomplete**, allowing users to
enter values that are not present in the provided options.

When `freeSolo` is enabled, the **Select All** option is automatically hidden. This is intentional
because the field can contain both predefined values and custom user-entered values, so
selecting "all" only from the predefined options can create confusing behavior.

When using `freeSolo` with object-based options, custom renderers such as `renderValue`, `renderTags`,
or `renderOptionLabel` should handle both option objects and user-entered string values. A common approach is:

```ts
typeof value === 'string'
```
to distinguish free-form input from predefined option objects.
</Callout>

## Usage

```tsx
import RHFMultiAutocomplete, { RHFMultiAutocompleteProps } from '@nish1896/rhf-mui-components/mui/multi-autocomplete';
```

```tsx
<RHFMultiAutocomplete
  fieldName="countriesVisited"
  control={control}
  options={['Azerbaijan', 'Canada', 'India']}
/>
```

For options as an array of objects:

```tsx
<RHFMultiAutocomplete
  fieldName="countriesVisited"
  control={control}
  options={countryList} // imported from RHFCountrySelect
  labelKey="name"
  valueKey="iso"
/>
```

<Callout type="warning">
When using an array of objects for options, both `labelKey` and `valueKey`
are required. If either is missing, an error will be thrown.
</Callout>

## Examples
- [RHFMultiAutocomplete](https://rhf-mui-components-examples.vercel.app/autocomplete)
- [Autocomplete Variations](https://v7.mui.com/material-ui/react-autocomplete/#playground)
- [Autocomplete with Checkboxes](https://v7.mui.com/material-ui/react-autocomplete/#selection-indicators)
- [Complete Form](https://rhf-mui-components-examples.vercel.app/complete-form)

## API
The `RHFMultiAutocompleteProps` interface extends [AutocompleteProps](https://v7.mui.com/material-ui/api/autocomplete/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable rows={componentPropsV4.RHFMultiAutocomplete} />
